made z_us_root.php dynamically created and not under git moved src/* files into git root moved sql/* into install/sql/*

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ users/admin_role.php
 users/admin_roles.php
 users/admin_grouptypes.php
 users/admin_grouptype.php
+users/z_us_root.php
 src/.htaccess
 *.bak
 *~
